added a few words

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Worlds Best Website!</title>
+  </head>
+  <body>
+    <h1>This is the world's best website</h1>
+    <p>It's kinda like modern art.  It's what's not here that adds value.  Let your mind run free!\n
+        Actully this site and most modern art is bs!  
+    </p>
+  </body>
+</html>
